--- a/nx-workspace/package.json
+++ b/nx-workspace/package.json
@@ -38,6 +38,7 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.1.0",
     "nx": "16.1.3",
+    "nx-cloud": "^16.0.5",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
