--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -8,8 +8,7 @@ runs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        cache: yarn
-        node-version-file: .nvmrc
+        cache: npm
     - name: Install dependencies
-      run: yarn install --frozen-lockfile --non-interactive
+      run: npm install --frozen-lockfile --non-interactive
       shell: bash
