--- a/demo-workspace/tsconfig.base.json
+++ b/demo-workspace/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@demo-workspace/shared/data-access-user": [
+        "libs/shared/data-access-user/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
